--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Category"
-    url: /cateogories/
+    url: /categories/
   - title: "Tag"
     url: /tags/
   # - title: "About"
